# KinanAexlaAldrein_app

./: README.md  gh_push.sh  pubspec.yaml
.github/: FUNDING.yml
.github/workflows/: beta_compile.yaml
native_lib/: CMakeLists.txt  readme.md
package/KinanAexlaAldrein_app/: pubspec.yaml
package/KinanAexlaAldrein_app/example/: KinanAexlaAldrein_app_example.dart
package/KinanAexlaAldrein_app/lib/: KinanAexlaAldrein_app.dart
package/KinanAexlaAldrein_app/test/: KinanAexlaAldrein_app_test.dart
package/KinanAexlaAldrein_app_android/: pubspec.yaml
package/KinanAexlaAldrein_app_android/lib/: KinanAexlaAldrein_app_android.dart
package/KinanAexlaAldrein_app_android/test/: KinanAexlaAldrein_app_android_test.dart
package/KinanAexlaAldrein_app_apis/: pubspec.yaml
package/KinanAexlaAldrein_app_apis/example/: KinanAexlaAldrein_app_apis_example.dart
package/KinanAexlaAldrein_app_apis/lib/: KinanAexlaAldrein_app_apis.dart
package/KinanAexlaAldrein_app_apis/test/: KinanAexlaAldrein_app_apis_test.dart
package/KinanAexlaAldrein_app_cli/: pubspec.yaml
package/KinanAexlaAldrein_app_cli/example/: KinanAexlaAldrein_app_cli_example.dart
package/KinanAexlaAldrein_app_cli/lib/: KinanAexlaAldrein_app_cli.dart
package/KinanAexlaAldrein_app_cli/test/: KinanAexlaAldrein_app_cli_test.dart
package/KinanAexlaAldrein_app_client/: pubspec.yaml
package/KinanAexlaAldrein_app_client/example/: KinanAexlaAldrein_app_client_example.dart
package/KinanAexlaAldrein_app_client/lib/: KinanAexlaAldrein_app_client.dart
package/KinanAexlaAldrein_app_client/test/: KinanAexlaAldrein_app_client_test.dart
package/KinanAexlaAldrein_app_dart/: pubspec.yaml
package/KinanAexlaAldrein_app_flutter/: pubspec.yaml
package/KinanAexlaAldrein_app_fucshia/: pubspec.yaml
package/KinanAexlaAldrein_app_ios/: README.md  pubspec.yaml
package/KinanAexlaAldrein_app_linux/: pubspec.yaml
package/KinanAexlaAldrein_app_macos/: pubspec.yaml
package/KinanAexlaAldrein_app_server/: pubspec.yaml
package/KinanAexlaAldrein_app_web/: pubspec.yaml
package/KinanAexlaAldrein_app_windows/: pubspec.yaml
test/: KinanAexlaAldrein_app_test.dart
(+20 files in other folders)
